--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -67,7 +67,7 @@
   <button type="button" class="PFC_btn" value="2" >
     <img src="../images/demo/ciseaux.jpg" alt="ciseaux" width="50px" height="50px"  /></button>
   </button>
-<p>Jouez :</p>
+<br>Jouez :</br>
 <div id="PFC_show_result"></div>
 
 <script type='text/Javascript'>
