--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main class="hoc container clear"> 
     <!-- main body -->
     <div class="group">
-      <div class="one_third first"><a href="#"><img src="images/demo/ppc4x5.png" alt=""></a></div>
+      <div class="one_third first"><a><img src="images/demo/ppc4x5.png" alt=""></a></div>
       <div class="two_third">
         <div class="btmspace-50">
           <h3 class="heading">Le but de PPC</h3>
