--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -67,9 +67,13 @@
   <button type="button" class="PFC_btn" value="2" >
     <img src="../images/demo/ciseaux.jpg" alt="ciseaux" width="50px" height="50px"  /></button>
   </button>
-<br>Jouez :</br>
+  <br></br>
+  <br></br>
+  <br></br>
+  <br></br>
+  <br></br>
+<p>Jouez :</p>
 <div id="PFC_show_result"></div>
-
 <script type='text/Javascript'>
 
 var PFC = {
