--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -30,7 +30,7 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">Le jeu</a></h1>
+        <h1><a href="full-width.html">Le jeu</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
