--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -31,7 +31,7 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">Gallerie</a></h1>
+        <h1><a href="gallery.html">Gallerie</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
